<resources>
    <string name="app_name">MiniChallengeChapter6AplikasiHitungBmi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thread">THREAD</string>
    <string name="handler_thread">HANDLER THREAD</string>
    <string name="kalkulator_hitung_bmi">KALKULATOR HITUNG BMI</string>
    <string name="masukkan_berat_badan">Masukkan berat badan (kg)</string>
    <string name="masukkan_tinggi_badan">Masukkan tinggi badan (cm)</string>
    <string name="hitung">HITUNG</string>
    <string name="kategori">Kategori :</string>
</resources>