<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ThreadFragment"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/kalkulator_hitung_bmi"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:hint="@string/masukkan_berat_badan"
        android:layout_marginBottom="10dp"
        android:id="@+id/thread_input_berat_badan"
        android:background="@drawable/custom_background_edit_text"
        android:importantForAutofill="no"
        android:inputType="text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:hint="@string/masukkan_tinggi_badan"
        android:id="@+id/thread_input_tinggi_badan"
        android:background="@drawable/custom_background_edit_text"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layout_marginBottom="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hitung"
        android:id="@+id/thread_button_hitung"
        android:layout_marginBottom="20dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginBottom="20dp"
        android:background="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kategori"
        android:id="@+id/thread_result"
        android:textSize="24sp"
        android:textColor="@color/black"/>
</LinearLayout>